<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/logInFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.geektech.smarthome2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.geektech.smarthome2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.geektech.smarthome2.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/logInFragment"
        android:name="com.geektech.smarthome2.ui.log_in.LogInFragment"
        android:label="fragment_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_mainFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_on_boarding"
        android:name="com.geektech.smarthome2.ui.onBoarding.OnBoardingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>